[package]
name = "omni_conf"
version = "0.1.0"
edition = "2024"
description = "A cross-platform configuration manager for desktop and mobile."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yanburman/omni_conf"
keywords = ["config", "cross-platform", "settings", "mobile", "desktop"]
categories = ["config", "os", "development-tools"]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[features]
default = ["json"]
json = ["dep:serde_json"]
toml = ["dep:toml"]

[dev-dependencies]
tempfile = { version = "3.8", default-features = false }

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
thiserror = { version = "2.0", default-features = false }
serde_json = { version = "1.0", features = ["std"], optional = true, default-features = false  }
toml = { version = "1.1.2", optional = true, default-features = false , features = ["serde", "parse", "display"] }

# Desktop
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
directories = { version = "6.0", default-features = false }

# Android
[target.'cfg(target_os = "android")'.dependencies]
ndk-context = { version = "0.1.1", default-features = false }

# iOS
[target.'cfg(target_os = "ios")'.dependencies]
objc = { version = "0.2", default-features = false }